--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
         run: terraform init
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve -var="email_from=projectsemail01@gmail.com"
+        run: terraform apply -auto-approve -var-file="email.tfvars""
